testsuite/tests/properties/invalid_external/test.out
== invalid_abstract/test.lkt ==
test.lkt:4:37: error: An external property cannot be abstract
4 |     @exported @external() @abstract fun p(): Bool
  |                                     ^^^^^^^^^^^^^


== invalid_memoized/test.lkt ==
test.lkt:4:37: error: An external property cannot be memoized
4 |     @exported @external() @memoized fun p(): Bool
  |                                     ^^^^^^^^^^^^^


lkt_compile: Done
